--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,214 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
+# Python.gitignore
+.vscode/
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Created by https://www.toptal.com/developers/gitignore/api/python
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+-----
+# # Byte-compiled / optimized / DLL files
+# __pycache__/
+# *.py[codz]
+# *$py.class
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# # C extensions
+# *.so
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
+# # Distribution / packaging
+# .Python
+# build/
+# develop-eggs/
+# dist/
+# downloads/
+# eggs/
+# .eggs/
+# lib/
+# lib64/
+# parts/
+# sdist/
+# var/
+# wheels/
+# share/python-wheels/
+# *.egg-info/
+# .installed.cfg
+# *.egg
+# MANIFEST
 
-# Translations
-*.mo
-*.pot
+# # PyInstaller
+# #  Usually these files are written by a python script from a template
+# #  before PyInstaller builds the exe, so as to inject date/other infos into it.
+# *.manifest
+# *.spec
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# # Installer logs
+# pip-log.txt
+# pip-delete-this-directory.txt
 
-# Flask stuff:
-instance/
-.webassets-cache
+# # Unit test / coverage reports
+# htmlcov/
+# .tox/
+# .nox/
+# .coverage
+# .coverage.*
+# .cache
+# nosetests.xml
+# coverage.xml
+# *.cover
+# *.py.cover
+# .hypothesis/
+# .pytest_cache/
+# cover/
 
-# Scrapy stuff:
-.scrapy
+# # Translations
+# *.mo
+# *.pot
 
-# Sphinx documentation
-docs/_build/
+# # Django stuff:
+# *.log
+# local_settings.py
+# db.sqlite3
+# db.sqlite3-journal
 
-# PyBuilder
-.pybuilder/
-target/
+# # Flask stuff:
+# instance/
+# .webassets-cache
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# # Scrapy stuff:
+# .scrapy
 
-# IPython
-profile_default/
-ipython_config.py
+# # Sphinx documentation
+# docs/_build/
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+# # PyBuilder
+# .pybuilder/
+# target/
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+# # Jupyter Notebook
+# .ipynb_checkpoints
 
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
+# # IPython
+# profile_default/
+# ipython_config.py
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
+# # pyenv
+# #   For a library or package, you might want to ignore these files since the code is
+# #   intended to run in multiple environments; otherwise, check them in:
+# # .python-version
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
+# # pipenv
+# #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+# #   However, in case of collaboration, if having platform-specific dependencies or dependencies
+# #   having no cross-platform support, pipenv may install dependencies that don't work, or not
+# #   install all needed dependencies.
+# #Pipfile.lock
 
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
+# # UV
+# #   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
+# #   This is especially recommended for binary packages to ensure reproducibility, and is more
+# #   commonly ignored for libraries.
+# #uv.lock
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+# # poetry
+# #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+# #   This is especially recommended for binary packages to ensure reproducibility, and is more
+# #   commonly ignored for libraries.
+# #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
+# #poetry.lock
+# #poetry.toml
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+# # pdm
+# #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
+# #   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
+# #   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
+# #pdm.lock
+# #pdm.toml
+# .pdm-python
+# .pdm-build/
 
-# SageMath parsed files
-*.sage.py
+# # pixi
+# #   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
+# #pixi.lock
+# #   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
+# #   in the .venv directory. It is recommended not to include this directory in version control.
+# .pixi
 
-# Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+# __pypackages__/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# # Celery stuff
+# celerybeat-schedule
+# celerybeat.pid
 
-# Rope project settings
-.ropeproject
+# # SageMath parsed files
+# *.sage.py
 
-# mkdocs documentation
-/site
+# # Environments
+# .env
+# .envrc
+# .venv
+# env/
+# venv/
+# ENV/
+# env.bak/
+# venv.bak/
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+# # Spyder project settings
+# .spyderproject
+# .spyproject
 
-# Pyre type checker
-.pyre/
+# # Rope project settings
+# .ropeproject
 
-# pytype static type analyzer
-.pytype/
+# # mkdocs documentation
+# /site
 
-# Cython debug symbols
-cython_debug/
+# # mypy
+# .mypy_cache/
+# .dmypy.json
+# dmypy.json
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# # Pyre type checker
+# .pyre/
 
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
+# # pytype static type analyzer
+# .pytype/
 
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
+# # Cython debug symbols
+# cython_debug/
 
-# Ruff stuff:
-.ruff_cache/
+# # PyCharm
+# #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+# #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+# #  and can be added to the global gitignore or merged into this file.  For a more nuclear
+# #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+# #.idea/
 
-# PyPI configuration file
-.pypirc
+# # Abstra
+# # Abstra is an AI-powered process automation framework.
+# # Ignore directories containing user credentials, local state, and settings.
+# # Learn more at https://abstra.io/docs
+# .abstra/
 
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+# # Visual Studio Code
+# #  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore
+# #  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
+# #  and can be added to the global gitignore or merged into this file. However, if you prefer,
+# #  you could uncomment the following to ignore the entire vscode folder
+# # .vscode/
 
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+# # Ruff stuff:
+# .ruff_cache/
+
+# # PyPI configuration file
+# .pypirc
+
+# # Cursor
+# #  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
+# #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
+# #  refer to https://docs.cursor.com/context/ignore-files
+# .cursorignore
+# .cursorindexingignore
+
+# # Marimo
+# marimo/_static/
+# marimo/_lsp/
+# __marimo__/
