--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
 pip~=23.2.1
+python-dotenv #==1.0.0
+pytest #==7.4.3
+black #==23.12.1
+isort #==5.13.2
+pylint #==3.0.3
+ruff #==0.1.11
+pandas #>=1.5.0
+requests #>=2.31.0
+edgar #>=8.1.0
+beautifulsoup4 #>=4.12.0
+lxml #>=4.9.0
